# pick_n_place

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt
model/: placeholder.txt
msg/: ObjectInfo.msg
src/: calculate_distances.py  get_photo.py  move_arm.py  object_detection.py  pick_and_place.py
src/helpers/: const.py  find_contour_angle.py  move_arm.py  solve_perspective.py  solve_pnp.py  test_move_arm.py
tests/: get_depth.py  get_one_image.py  get_raw_photo.py  listener.py  notes  take_image.py  talker.py  test_listener.py  test_move_arm.py  test_notes
