<?xml version="1.0"?>
<package format="2">
  <name>pick_n_place</name>
  <version>0.0.0</version>
  <description>Pick and place package</description>

  <maintainer email="yue.vera@gmail.com">Jesus Vera</maintainer>
  <license>TODO</license>
  <url type="website">https://github.com/mrtonks/pick_n_place</url>
  <author email="yue.vera@gmail.com">Jesus Vera</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
</package>
